--- a/ps6prob2/testsc/desktop.ini
+++ b/ps6prob2/testsc/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2024-12-02 130218.png=@Screenshot 2024-12-02 130218,0
 Screenshot 2024-12-02 130253.png=@Screenshot 2024-12-02 130253,0
+shellgametestrun.png=@shellgametestrun,0
